# NESting

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md
.github/: cpp.yml
.github/workflow/: cpp.yml
.github/workflows/: cpp.yml
NESting/: .gitignore  APUNoise.cpp  APUNoise.h  APUNoise.hpp  BlockSquare.dsp  BlockTriangle.dsp  CMakeLists.txt  FaustCode.hpp  FaustSquare.hpp  FaustTriangle.hpp  LFOGraph.cpp  LFOGraph.h  NESVoice.cpp  NESVoice.h  NESted.dsp  NESted.hpp  NESting.RPP  NESting.cpp  NESting.dsp  NESting.h  NESting.sln  NESting_DSP.h  NESting_gui.cpp  NESting_serialize.cpp  README.md  compile_faust.bat  config.h  constants.h  math_utils.h  slice.hpp
NESting/NESting.xcworkspace/: contents.xcworkspacedata
NESting/config/: NESting-ios.xcconfig  NESting-mac.xcconfig  NESting-web.mk  NESting-win.props
NESting/gui/: ColorSpec.h  ControlBarGraph.cpp  ControlBarGraph.h  IVDropdownMenuControl.h  LFOGraphControl.cpp  LFOGraphControl.h  LoopPointControl.cpp  LoopPointControl.h
NESting/installer/: NESting.iss  NESting.pkgproj  changelog.txt  license.rtf  readme-osx.rtf  readme-win.rtf
NESting/presets/: presets.RPL  presets.cpp  presets.h
NESting/projects/: NESting-aax.vcxproj  NESting-aax.vcxproj.filters  NESting-app.vcxproj  NESting-app.vcxproj.filters  NESting-vst2.vcxproj  NESting-vst2.vcxproj.filters  NESting-vst3.vcxproj  NESting-vst3.vcxproj.filters  NESting-wam-controller.mk  NESting-wam-processor.mk
NESting/projects/NESting-iOS.xcodeproj/: project.pbxproj
NESting/projects/NESting-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
NESting/projects/NESting-macOS.xcodeproj/: project.pbxproj
NESting/projects/NESting-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
NESting/resources/: IPlugAUViewController.xib  NESting-AAX-Info.plist  NESting-AU-Info.plist  NESting-Pages.xml  NESting-VST2-Info.plist  NESting-VST3-Info.plist  NESting-iOS-AUv3-Info.plist  NESting-iOS-Info.plist  NESting-iOS-launchScreen.storyboard  NESting-macOS-AUv3-Info.plist  NESting-macOS-AUv3Framework-Info.plist  NESting-macOS-Info.plist  NESting-macOS-MainMenu.xib  macOS-App-Info.plist.in  macOS-VST3-Info.plist.in  main.rc  main.rc_mac_dlg
NESting/scripts/: make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  postbuild-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  prepare_resources-win.py  rpl2cpp.py  update_installer_version.py  update_version.py
